[gd_scene load_steps=4 format=3 uid="uid://ckoymnlct4phi"]

[ext_resource type="Script" path="res://player/other/attack_areas.gd" id="1_s3diw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l85lk"]
radius = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n52lj"]
radius = 96.0

[node name="attack_areas" type="Node2D"]
script = ExtResource("1_s3diw")

[node name="attack_area" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("CircleShape2D_l85lk")

[node name="attract_area" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attract_area"]
shape = SubResource("CircleShape2D_n52lj")

[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="attract_area" to="." method="_on_attract_area_body_entered"]
[connection signal="body_exited" from="attract_area" to="." method="_on_attract_area_body_exited"]
